[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/MouseIcons/fort.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Fort/Fort.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 1, 1 )

[sub_resource type="CircleShape2D" id=2]
radius = 90.0

[node name="Fort" type="StaticBody2D" groups=["fort"]]
collision_layer = 8
collision_mask = 11
script = ExtResource( 2 )
condition_max = 70

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.37, 0.37 )
texture = ExtResource( 1 )

[node name="Bar" type="ProgressBar" parent="."]
margin_left = -54.0
margin_top = -69.0
margin_right = 8.0
margin_bottom = -55.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_styles/fg = SubResource( 1 )
max_value = 70.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
scale = Vector2( 1.24, 1.25375 )
polygon = PoolVector2Array( -63, 14, -61, -47, 14, -47, 63, -12, 62, 45, -24, 46 )

[connection signal="mouse_entered" from="." to="." method="_on_Fort_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Fort_mouse_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
